--- a/m5d1/package.json
+++ b/m5d1/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.1",
+    "env": "^0.0.2",
     "react": "^18.0.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.0.0",
@@ -15,6 +16,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^3.0.1",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
